@@ -1,22 +1,5 @@
 package dev.langchain4j.model.bedrock;
 
-import dev.langchain4j.data.embedding.Embedding;
-import dev.langchain4j.data.segment.TextSegment;
-import dev.langchain4j.model.embedding.DimensionAwareEmbeddingModel;
-import dev.langchain4j.model.output.Response;
-import software.amazon.awssdk.auth.credentials.AwsCredentialsProvider;
-import software.amazon.awssdk.auth.credentials.DefaultCredentialsProvider;
-import software.amazon.awssdk.core.SdkBytes;
-import software.amazon.awssdk.regions.Region;
-import software.amazon.awssdk.services.bedrockruntime.BedrockRuntimeClient;
-import software.amazon.awssdk.services.bedrockruntime.model.InvokeModelRequest;
-import software.amazon.awssdk.services.bedrockruntime.model.InvokeModelResponse;
-
-import java.nio.charset.Charset;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
 import static dev.langchain4j.internal.RetryUtils.withRetryMappingExceptions;
 import static dev.langchain4j.internal.Utils.getOrDefault;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotBlank;
@@ -25,6 +8,23 @@ import static dev.langchain4j.model.bedrock.Json.toJson;
 import static java.util.Arrays.stream;
 import static java.util.stream.Collectors.toList;
 import static software.amazon.awssdk.regions.Region.US_EAST_1;
+
+import dev.langchain4j.data.embedding.Embedding;
+import dev.langchain4j.data.segment.TextSegment;
+import dev.langchain4j.model.embedding.DimensionAwareEmbeddingModel;
+import dev.langchain4j.model.output.Response;
+import java.nio.charset.Charset;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import software.amazon.awssdk.auth.credentials.AwsCredentialsProvider;
+import software.amazon.awssdk.auth.credentials.DefaultCredentialsProvider;
+import software.amazon.awssdk.core.SdkBytes;
+import software.amazon.awssdk.regions.Region;
+import software.amazon.awssdk.services.bedrockruntime.BedrockRuntimeClient;
+import software.amazon.awssdk.services.bedrockruntime.model.InvokeModelRequest;
+import software.amazon.awssdk.services.bedrockruntime.model.InvokeModelResponse;
 
 /**
  * Bedrock Cohere embedding model with support for both versions:
@@ -35,11 +35,14 @@ import static software.amazon.awssdk.regions.Region.US_EAST_1;
  */
 public class BedrockCohereEmbeddingModel extends DimensionAwareEmbeddingModel {
 
+    private static final int DEFAULT_MAX_SEGMENTS_PER_BATCH = 96;
+
     private final BedrockRuntimeClient client;
     private final String model;
     private final String inputType;
     private final String truncate;
     private final int maxRetries;
+    private final int maxSegmentsPerBatch;
 
     public BedrockCohereEmbeddingModel(Builder builder) {
         this.client = getOrDefault(builder.client, () -> initClient(builder));
@@ -47,31 +50,38 @@ public class BedrockCohereEmbeddingModel extends DimensionAwareEmbeddingModel {
         this.inputType = ensureNotBlank(builder.inputType, "inputType");
         this.truncate = builder.truncate;
         this.maxRetries = getOrDefault(builder.maxRetries, 2);
+        this.maxSegmentsPerBatch = getOrDefault(builder.maxSegmentsPerBatch, DEFAULT_MAX_SEGMENTS_PER_BATCH);
     }
 
     private BedrockRuntimeClient initClient(Builder builder) {
         return BedrockRuntimeClient.builder()
                 .region(getOrDefault(builder.region, US_EAST_1))
-                .credentialsProvider(getOrDefault(builder.credentialsProvider,
-                        () -> DefaultCredentialsProvider.builder().build()))
+                .credentialsProvider(
+                        getOrDefault(builder.credentialsProvider, () -> DefaultCredentialsProvider.builder()
+                                .build()))
                 .build();
     }
 
     @Override
     public Response<List<Embedding>> embedAll(List<TextSegment> textSegments) {
+        List<Embedding> embeddings = new ArrayList<>();
 
-        Map<String, Object> requestParameters = toRequestParameters(textSegments);
-        String requestJson = toJson(requestParameters);
+        for (int i = 0; i < textSegments.size(); i += maxSegmentsPerBatch) {
+            List<TextSegment> batch = textSegments.subList(i, Math.min(textSegments.size(), i + maxSegmentsPerBatch));
+            Map<String, Object> requestParameters = toRequestParameters(batch);
+            String requestJson = toJson(requestParameters);
 
-        InvokeModelResponse invokeModelResponse = withRetryMappingExceptions(() ->
-                invoke(requestJson), maxRetries, BedrockExceptionMapper.INSTANCE);
+            InvokeModelResponse invokeModelResponse =
+                    withRetryMappingExceptions(() -> invoke(requestJson), maxRetries, BedrockExceptionMapper.INSTANCE);
 
-        String responseJson = invokeModelResponse.body().asUtf8String();
-        BedrockCohereEmbeddingResponse embeddingResponse = fromJson(responseJson, BedrockCohereEmbeddingResponse.class);
+            String responseJson = invokeModelResponse.body().asUtf8String();
+            BedrockCohereEmbeddingResponse embeddingResponse =
+                    fromJson(responseJson, BedrockCohereEmbeddingResponse.class);
 
-        List<Embedding> embeddings = stream(embeddingResponse.getEmbeddings().getFloatEmbeddings())
-                .map(Embedding::from)
-                .collect(toList());
+            embeddings.addAll(stream(embeddingResponse.getEmbeddings().getFloatEmbeddings())
+                    .map(Embedding::from)
+                    .toList());
+        }
 
         return Response.from(embeddings);
     }
@@ -106,6 +116,7 @@ public class BedrockCohereEmbeddingModel extends DimensionAwareEmbeddingModel {
         private Region region;
         private AwsCredentialsProvider credentialsProvider;
         private Integer maxRetries;
+        private Integer maxSegmentsPerBatch;
 
         public Builder model(Model model) {
             return model(model.getValue());
@@ -154,13 +165,17 @@ public class BedrockCohereEmbeddingModel extends DimensionAwareEmbeddingModel {
             return this;
         }
 
+        public Builder maxSegmentsPerBatch(Integer maxSegmentsPerBatch) {
+            this.maxSegmentsPerBatch = maxSegmentsPerBatch;
+            return this;
+        }
+
         public BedrockCohereEmbeddingModel build() {
             return new BedrockCohereEmbeddingModel(this);
         }
     }
 
     public enum Model {
-
         COHERE_EMBED_ENGLISH_V3("cohere.embed-english-v3"),
         COHERE_EMBED_MULTILINGUAL_V3("cohere.embed-multilingual-v3");
 
@@ -176,7 +191,6 @@ public class BedrockCohereEmbeddingModel extends DimensionAwareEmbeddingModel {
     }
 
     public enum InputType {
-
         SEARCH_DOCUMENT("search_document"),
         SEARCH_QUERY("search_query"),
         CLASSIFICATION("classification"),
@@ -194,7 +208,6 @@ public class BedrockCohereEmbeddingModel extends DimensionAwareEmbeddingModel {
     }
 
     public enum Truncate {
-
         NONE("NONE"),
         START("START"),
         END("END");
